created test page and work on url queries

--- a/templates/test.html
+++ b/templates/test.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-    {{posts}}
+    <!-- {{posts}}
 
     {% for post in posts %}
         {% if post.status == 0 %}
@@ -20,6 +20,8 @@
             <small>{{post.published_date}}</small>
         {% endif %}
     {% endfor %}
+    /-->
+    <p>{{post.title}}</p>
 
 </body>
 
