--- a/templates/blog/blog-single.html
+++ b/templates/blog/blog-single.html
@@ -24,6 +24,7 @@
 	<div class="container">
 		<div class="row">
 			<div class="col-lg-8 posts-list">
+				{% for post in full_posts %}
 				<div class="single-post row">
 					<div class="col-lg-12">
 						<div class="feature-img">
@@ -42,7 +43,7 @@
 									class="lnr lnr-user"></span></p>
 							<p class="date col-lg-12 col-md-12 col-6"><a href="#">12 Dec, 2017</a> <span
 									class="lnr lnr-calendar-full"></span></p>
-							<p class="view col-lg-12 col-md-12 col-6"><a href="#">1.2M Views</a> <span
+							<p class="view col-lg-12 col-md-12 col-6"><a href="#">{{post.counted_views_2}}</a> <span
 									class="lnr lnr-eye"></span></p>
 							<p class="comments col-lg-12 col-md-12 col-6"><a href="#">06 Comments</a> <span
 									class="lnr lnr-bubble"></span></p>
@@ -105,6 +106,7 @@
 						</div>
 					</div>
 				</div>
+				{% endfor %}
 				<div class="navigation-area">
 					<div class="row">
 						<div
