--- a/templates/blog/blog-single.html
+++ b/templates/blog/blog-single.html
@@ -58,12 +58,13 @@
 						<h3 class="mt-20 mb-20">{{post.title}}</h3>
 						<p class="excert">
 							{{post.content}}
+							{{len_posts}}
 						</p>
 					</div>
 				</div>
 				
 				<div class="navigation-area">
-					<div class="row">
+					<div class="row">						
 						<div
 							class="col-lg-6 col-md-6 col-12 nav-left flex-row d-flex justify-content-start align-items-center">
 							<div class="thumb">
