--- a/templates/blog/blog-single.html
+++ b/templates/blog/blog-single.html
@@ -58,42 +58,45 @@
 						<h3 class="mt-20 mb-20">{{post.title}}</h3>
 						<p class="excert">
 							{{post.content}}
-							{{len_posts}}
 						</p>
 					</div>
 				</div>
-				
+
 				<div class="navigation-area">
-					<div class="row">						
+					<div class="row">
 						<div
 							class="col-lg-6 col-md-6 col-12 nav-left flex-row d-flex justify-content-start align-items-center">
+							{% if prevpost %}
 							<div class="thumb">
-								<a href="#"><img class="img-fluid" src="{% static 'img/blog/prev.jpg' %}" alt=""></a>
+								<a href="{% url 'blog:single' pid=prevpost.id %}"><img class="img-fluid" src="{% static 'img/blog/prev.jpg' %}" alt=""></a>
 							</div>
 							<div class="arrow">
 								<a href="#"><span class="lnr text-white lnr-arrow-left"></span></a>
 							</div>
 							<div class="detials">
 								<p>Prev Post</p>
-								<a href="#">
-									<h4>Space The Final Frontier</h4>
+								<a href="{% url 'blog:single' pid=prevpost.id %}">
+									<h4>{{prevpost}}</h4>
 								</a>
 							</div>
+							{% endif %}
 						</div>
 						<div
 							class="col-lg-6 col-md-6 col-12 nav-right flex-row d-flex justify-content-end align-items-center">
+							{% if nextpost %}
 							<div class="detials">
 								<p>Next Post</p>
-								<a href="#">
-									<h4>Telescopes 101</h4>
+								<a href="{% url 'blog:single' pid=nextpost.id %}">
+									<h4>{{nextpost}}</h4>
 								</a>
 							</div>
 							<div class="arrow">
 								<a href="#"><span class="lnr text-white lnr-arrow-right"></span></a>
 							</div>
 							<div class="thumb">
-								<a href="#"><img class="img-fluid" src="{% static 'img/blog/next.jpg' %}" alt=""></a>
+								<a href="{% url 'blog:single' pid=nextpost.id %}"><img class="img-fluid" src="{% static 'img/blog/next.jpg' %}" alt=""></a>
 							</div>
+							{% endif %}
 						</div>
 					</div>
 				</div>
