--- a/templates/website/website-lastest-blog-posts.html
+++ b/templates/website/website-lastest-blog-posts.html
@@ -16,7 +16,9 @@
             {% for post in posts %}
             <div class="single-recent-blog-post item">
                 <div class="thumb">
-                    <img class="img-fluid" src="{{post.image.url}}" alt="">
+                    <a href="{% url 'blog:single' pid=post.id %}">
+                        <img class="img-fluid"  src="{{post.image.url}}" alt="">
+                    </a>
                 </div>
                 <div class="details">
                     <div class="tags">
@@ -28,7 +30,7 @@
                             {% endfor %}
                         </ul>
                     </div>
-                    <a href="#">
+                    <a href="{% url 'blog:single' pid=post.id %}">
                         <h4 class="title">{{post.title}}</h4>
                     </a>
                     <p>{{post.content|snippet:60}}</p>
