completion of comment form part-2

--- a/templates/blog/blog-single.html
+++ b/templates/blog/blog-single.html
@@ -128,6 +128,7 @@
 				<div class="comment-form">
 					<h4>Leave a Comment</h4>
 					<form method="post" action="{% url 'blog:single' pid=post.id %}">
+						{% csrf_token %}
 						<div class="form-group form-inline">
 							<div class="form-group col-lg-6 col-md-12 name">
 								<input type="text" class="form-control" name="name" placeholder="Enter Name"
