--- a/templates/base.html
+++ b/templates/base.html
@@ -42,6 +42,7 @@
                         <ul>
                             {% if request.user.is_authenticated %}
                                 <li><a href="#">Logged as {{request.user.username}}</a></li>
+                                <li><a href="{% url 'accounts:logout' %}">Logout</a></li>
                                 <li><a href="#">Buy Tickets</a></li>
                             {% else %}
                                 <li><a href="{% url 'accounts:login' %}">Login</a></li>
