--- a/templates/accounts/login.html
+++ b/templates/accounts/login.html
@@ -28,7 +28,8 @@
       <div class="checkbox mb-3">
         <label>
           <input type="checkbox" value="remember-me"> Remember me
-        </label>
+        </label><br>
+        <a href="accounts/password_reset">Forgot password?</a>
       </div>
       <button class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
       <p class="mt-5 mb-3 text-muted">&copy; 2017-2018</p>
