--- a/templates/accounts/login.html
+++ b/templates/accounts/login.html
@@ -29,7 +29,7 @@
         <label>
           <input type="checkbox" value="remember-me"> Remember me
         </label><br>
-        <a href="accounts/password_reset">Forgot password?</a>
+        <a href="password_reset">Forgot password?</a>
       </div>
       <button class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
       <p class="mt-5 mb-3 text-muted">&copy; 2017-2018</p>
