--- a/templates/base.html
+++ b/templates/base.html
@@ -1,4 +1,5 @@
 {% load static %}
+{% load compress %}
 <!DOCTYPE html>
 <html lang="zxx" class="no-js">
 
@@ -17,11 +18,11 @@
     <meta charset="UTF-8">
     <!-- Site Title -->
     <title>Travel</title>
-
-    <link href="https://fonts.googleapis.com/css?family=Poppins:100,200,400,300,500,600,700" rel="stylesheet">
+    
     <!--
         CSS
         ============================================= -->
+    {% compress css %}
     <link rel="stylesheet" href="{% static 'css/linearicons.css' %}">
     <link rel="stylesheet" href="{% static 'css/font-awesome.min.css' %}">
     <link rel="stylesheet" href="{% static 'css/bootstrap.css' %}">
@@ -31,6 +32,7 @@
     <link rel="stylesheet" href="{% static 'css/animate.min.css' %}">
     <link rel="stylesheet" href="{% static 'css/owl.carousel.css' %}">
     <link rel="stylesheet" href="{% static 'css/main.css' %}">
+    {% endcompress %}
 </head>
 
 <body>
@@ -210,11 +212,10 @@
         </div>
     </footer>
     <!-- End footer Area -->
-
+    {% compress js %}
     <script src="{% static  'js/vendor/jquery-2.2.4.min.js' %}"></script>
     <script src="{% static  'js/popper.min.js' %}"></script>
     <script src="{% static  'js/vendor/bootstrap.min.js' %}"></script>
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBhOdIF3Y9382fqJYt5I_sswSrEw5eihAA"></script>
     <script src="{% static  'js/jquery-ui.js' %}"></script>
     <script src="{% static  'js/easing.min.js' %}"></script>
     <script src="{% static  'js/hoverIntent.js' %}"></script>
@@ -225,6 +226,7 @@
     <script src="{% static  'js/owl.carousel.min.js' %}"></script>
     <script src="{% static  'js/mail-script.js' %}"></script>
     <script src="{% static  'js/main.js' %}"></script>
+    {% endcompress %}
 </body>
 
 </html>
