--- a/templates/base.html
+++ b/templates/base.html
@@ -17,7 +17,7 @@
     <!-- meta character set -->
     <meta charset="UTF-8">
     <!-- Site Title -->
-    <title>Travel</title>
+    <title>Travelista</title>
     
     <!--
         CSS
@@ -66,7 +66,7 @@
         <div class="container main-menu">
             <div class="row align-items-center justify-content-between d-flex">
                 <div id="logo">
-                    <a href="{% url 'website:index' %}"><img src="{% static 'img/logo.png' %}' %}" alt="" title="" /></a>
+                    <a href="{% url 'website:index' %}"><img src="{% static 'img/logo.png' %}" alt="" title="" /></a>
                 </div>
                 <nav id="nav-menu-container">
                     <ul class="nav-menu">
